@@ -1,3 +1,8 @@
+2011-10-18  WOnder93  <omosnacek@gmail.com>
+
+	* Bang#.userprefs:
+	  
+
 2011-09-29  WOnder93  <omosnacek@gmail.com>
 
 	* Bang#.userprefs:
